--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,13 @@
 body {
-	background: white;
+	background: #e2e2e2;
 }
 .bg-primary1{
 	background:#424242 !important;
+}
+.banner{
+	width: 100%;
+	height: 90vh;
+	background:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)) ,url(../images/contact1.jpg);
+	background-size: cover;
+	color: white;
 }
