--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,9 +7,13 @@
 </head>
 
 <body>
-	<section>
-		<h1>Welcome to home page</h1>
-		<h1></h1>
+	<section class="banner d-flex justify-content-center align-items-center">
+		<div class="text-center">
+			<h1 class="font-weight-bold">Smart Contact Manager</h1>
+			<p>Start gathering your contacts in a much more strategic manner.
+				We offer a far more smart and effective method of handling contacts.</p>
+				<button class="btn btn-primary btn-lg">Get Started</button>
+		</div>
 	</section>
 </body>
 
