--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 			<h1 class="font-weight-bold">Smart Contact Manager</h1>
 			<p>Start gathering your contacts in a much more strategic manner.
 				We offer a far more smart and effective method of handling contacts.</p>
-				<button class="btn btn-primary btn-lg">Get Started</button>
+			<a href="signup" class="btn btn-primary btn-lg">Get Started</a>
 		</div>
 	</section>
 </body>
