--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -5,17 +5,67 @@
 	<meta charset="UTF-8" />
 	<title>Signup</title>
 </head>
+
 <body>
 	<section>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 offset-md-2">
-					<div class="my-card">
+				<div class="col-md-6 offset-md-3">
+					<div class="my-card mt-2 mb-2">
+						<div th:if="${message}" th:classappend="${message.type}" class="alert" role="alert">
+							<p th:text="${message.content}"></p>
+						</div>
+						<div class="container text-center">
+							<img style="width: 70px;" th:src="@{/images/logo.png}" alt="" />
+						</div>
 						<h1 class="text-center">Register Here!!</h1>
+						<form novalidate class="needs-validation" th:action="@{/do_register}" method="post"
+							th:object="${user}">
+							<div class="mb-3">
+								<label for="name_field" class="form-label">Name</label>
+								<input name="name" type="text" class="form-control"
+									th:classappend="${#fields.hasErrors('name') ? 'is-invalid':''}" id="name_field"
+									aria-describedby="emailHelp" placeholder="Enter Your Name" required
+									th:value="${user.name}">
+								<div class="invalid-feedback" th:each="e: ${#fields.errors('name')}" th:text="${e}">
+								</div>
+							</div>
+							<div class="mb-3">
+								<label for="email_field" class="form-label">Email</label>
+								<input name="email" type="email" class="form-control"
+									th:classappend="${#fields.hasErrors('email') ? 'is-invalid':''}" id="email_field"
+									aria-describedby="emailHelp" placeholder="Enter Your Email" required
+									th:value="${user.email}">
+								<div class="invalid-feedback" th:each="e: ${#fields.errors('email')}" th:text="${e}">
+								</div>
+							</div>
+							<div class="mb-3">
+								<label for="password_field" class="form-label">Password</label>
+								<input name="password" type="password" class="form-control"
+									th:classappend="${#fields.hasErrors('password') ? 'is-invalid':''}"
+									id="password_field" aria-describedby="emailHelp" placeholder="Enter Your Password"
+									required>
+								<div class="invalid-feedback" th:each="e: ${#fields.errors('password')}" th:text="${e}">
+								</div>
+							</div>
+							<div class="mb-3">
+								<textarea name="about" id="" cols="30" rows="10" class="form-control"
+									placeholder="Write Something About Yourself" th:text="${user.about}"></textarea>
+							</div>
+							<div class="mb-3 form-check">
+								<input type="checkbox" name="agrement" class="form-check-input" id="agrement" />
+								<label for="agrement">Accept Terms and Conditions</label>
+							</div>
+							<div class="container text-center">
+								<button type="submit" class="btn btn-primary">Submit</button>
+								<button type="reset" class="btn btn-warning">Reset</button>
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 </body>
+
 </html>
