--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -30,20 +30,17 @@
 						<a class="nav-link active" aria-current="page" href="/">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="about">About</a>
+						<a class="nav-link" href=""><span th:text="${user.name}"></span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/user/index">Login</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="signup">signup</a>
+						<a class="nav-link" th:href="@{/logout}">Logout</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 	<!--End Navbar-->
-	
+
 	<div th:replace="${content}"></div>
 
 
