--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -1,10 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{normal/base::layout(~{::section})}">
+
 <head>
 	<meta charset="UTF-8" />
-	<title>User Dashboard</title>
+	<title>About</title>
 </head>
+
 <body>
-	<h1>Welcome</h1>
+	<section>
+		<h1>This is private </h1>
+
+
+	</section>
 </body>
+
 </html>
