--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -10,6 +10,9 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/style.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<title th:text="${title}">Base</title>
 </head>
 
@@ -40,9 +43,29 @@
 		</div>
 	</nav>
 	<!--End Navbar-->
+	<!--Start Sidebar-->
 
-	<div th:replace="${content}"></div>
 
+	<div class="sidebar">
+		<span onclick="toggleSidebar()" class="crossBtn">&times;</span>
+		<a href="" class="item"><i class="fa-solid fa-house"></i> Home</a>
+		<a href="" class="item"><i class="fa-solid fa-address-book"></i> View Contact</a>
+		<a href="" class="item"><i class="fa-solid fa-address-card"></i> Add Contact</a>
+		<a href="" class="item"><i class="fa-solid fa-user"></i> Pofile</a>
+		<a href="" class="item"><i class="fa-solid fa-gear"></i> Settings</a>
+		<a href="" class="item"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+		<div class="divider"></div>
+	</div>
+
+
+	<!--End Sidebar-->
+
+	<!--Content Area-->
+
+	<div class="content">
+		<i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
+		<div th:replace="${content}"></div>
+	</div>
 
 
 
@@ -51,10 +74,15 @@
 		crossorigin="anonymous"></script>
 	<script src="/js/script.js"></script>
 	<!-- Option 2: Separate Popper and Bootstrap JS -->
-	<!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+	<script src="https://code.jquery.com/jquery-3.7.0.js"
+		integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+		crossorigin="anonymous"></script>
+
 </body>
 
 </html>
