--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -48,12 +48,12 @@
 
 	<div class="sidebar">
 		<span onclick="toggleSidebar()" class="crossBtn">&times;</span>
-		<a href="" class="item"><i class="fa-solid fa-house"></i> Home</a>
+		<a href="/user/index" class="item"><i class="fa-solid fa-house"></i> Home</a>
 		<a href="" class="item"><i class="fa-solid fa-address-book"></i> View Contact</a>
-		<a href="" class="item"><i class="fa-solid fa-address-card"></i> Add Contact</a>
+		<a href="/user/addContact" class="item"><i class="fa-solid fa-address-card"></i> Add Contact</a>
 		<a href="" class="item"><i class="fa-solid fa-user"></i> Pofile</a>
 		<a href="" class="item"><i class="fa-solid fa-gear"></i> Settings</a>
-		<a href="" class="item"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+		<a href="/logout" class="item"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
 		<div class="divider"></div>
 	</div>
 
