--- a/src/main/resources/templates/normal/addContact.html
+++ b/src/main/resources/templates/normal/addContact.html
@@ -8,6 +8,12 @@
 
 <body>
 	<section>
+		<!-- Alert -->
+		<div th:if="${msg}" class="container text-center">
+			<div th:classappend="${msg.type}" class="alert" role="alert">
+				<span th:text="${msg.content}"></span>
+			</div>
+		</div>
 		<div>
 			<div class="card-body">
 				<h1 class="text-center">Add Contact</h1>
@@ -18,7 +24,33 @@
 								th:action="@{/user/process-contact}" class="mt-2">
 								<div class="input-group">
 									<input class="form-control" type="text" id="firstName" name="name"
-										placeholder="First Name" />
+										placeholder="First Name" required />
+								</div>
+								<div class="input-group mt-3">
+									<input class="form-control" type="text" id="secondName" name="secondName"
+										placeholder="Second Name" required />
+								</div>
+								<div class="input-group mt-3">
+									<input class="form-control" type="email" id="email" name="email" placeholder="Email"
+										required />
+								</div>
+								<div class="input-group mt-3">
+									<input class="form-control" type="text" id="phone" name="phone" placeholder="Phone"
+										required />
+								</div>
+								<div class="input-group mt-3">
+									<input class="form-control" type="text" id="work" name="work" placeholder="Work"
+										required />
+								</div>
+								<div class="input-group mt-3">
+									<textarea class="form-control" name="description" rows="10"
+										placeholder="Write something about yourself"></textarea>
+								</div>
+								<div class="custom-file mt-3">
+									<input type="file" name="profileImage" placeholder="Select Image" />
+								</div>
+								<div class="container text-center mt-3">
+									<button class="btn btn-outline-primary">Add Contact</button>
 								</div>
 							</form>
 						</div>
