--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -18,7 +18,7 @@
 
 <body>
 	<!--Start Navbar-->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-primary1">
+	<nav class=" fixed-top navbar navbar-expand-lg navbar-dark bg-primary1">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">Smart Contact Manager</a>
 
@@ -46,10 +46,10 @@
 	<!--Start Sidebar-->
 
 
-	<div class="sidebar">
-		<span onclick="toggleSidebar()" class="crossBtn">&times;</span>
-		<a href="/user/index" class="item"><i class="fa-solid fa-house"></i> Home</a>
-		<a href="" class="item"><i class="fa-solid fa-address-book"></i> View Contact</a>
+	<div class="sidebar mt-2.1">
+		<span onclick="toggleSidebar()" class="crossBtn mb-8">&times;</span>
+		<a href="/user/index" class="item mt-3"><i class="fa-solid fa-house"></i> Home</a>
+		<a href="/user/viewContacts" class="item"><i class="fa-solid fa-address-book"></i> View Contact</a>
 		<a href="/user/addContact" class="item"><i class="fa-solid fa-address-card"></i> Add Contact</a>
 		<a href="" class="item"><i class="fa-solid fa-user"></i> Pofile</a>
 		<a href="" class="item"><i class="fa-solid fa-gear"></i> Settings</a>
@@ -62,12 +62,10 @@
 
 	<!--Content Area-->
 
-	<div class="content">
-		<i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
+	<div class="content mt-5 fixed">
+		<i onclick="toggleSidebar()" class="fas fa-bars mt-4 ml-4"></i>
 		<div th:replace="${content}"></div>
 	</div>
-
-
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
