--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -49,7 +49,7 @@
 	<div class="sidebar mt-2.1">
 		<span onclick="toggleSidebar()" class="crossBtn mb-8">&times;</span>
 		<a href="/user/index" class="item mt-3"><i class="fa-solid fa-house"></i> Home</a>
-		<a href="/user/viewContacts" class="item"><i class="fa-solid fa-address-book"></i> View Contact</a>
+		<a href="/user/viewContacts/0" class="item"><i class="fa-solid fa-address-book"></i> View Contact</a>
 		<a href="/user/addContact" class="item"><i class="fa-solid fa-address-card"></i> Add Contact</a>
 		<a href="" class="item"><i class="fa-solid fa-user"></i> Pofile</a>
 		<a href="" class="item"><i class="fa-solid fa-gear"></i> Settings</a>
