--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,7 +5,13 @@ body {
 .bg-primary1 {
 	background: #424242 !important;
 }
-
+.my-profile-picture{
+	width: 30px;
+	height: 30px;
+	object-fit: cover;
+	border-radius: 50%;
+	border: 1px solid black;
+}
 .banner {
 	width: 100%;
 	height: 90vh;
