--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -51,7 +51,7 @@
 		<a href="/user/index" class="item mt-3"><i class="fa-solid fa-house"></i> Home</a>
 		<a href="/user/viewContacts/0" class="item"><i class="fa-solid fa-address-book"></i> View Contact</a>
 		<a href="/user/addContact" class="item"><i class="fa-solid fa-address-card"></i> Add Contact</a>
-		<a href="" class="item"><i class="fa-solid fa-user"></i> Pofile</a>
+		<a href="/user/profile" class="item"><i class="fa-solid fa-user"></i> Pofile</a>
 		<a href="" class="item"><i class="fa-solid fa-gear"></i> Settings</a>
 		<a href="/logout" class="item"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
 		<div class="divider"></div>
